--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
                         <li>Connected to Slack & Airtable for concern tickets (Notification & Database).</li>
                         <li>Uses agents as tools (and those agents have their own tools).</li>
                         <li>For demo queries (orders, refunds, payment details), please use tracking numbers 1-5.</li>
-                        <li>Example: Whats the status of my order?, I want to change my payment method, etc..</li>
+                        <li>Example: Whats the status of my order?, I want to change my payment method,.</li>
                     </ul>
                 </div>
             </div>
@@ -80,7 +80,7 @@
 
     <script>
         // IMPORTANT: Replace with your actual FastAPI server URL
-        const API_URL = "http://localhost:8000";
+        const API_URL = "";
         const CHAT_STREAM_ENDPOINT = `${API_URL}/chat/stream`;
 
         const chatForm = document.getElementById('chat-form');
