edit wordings in html

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
             <div class="flex justify-start">
                 <!-- MODIFICATION: Updated welcome bubble with more info -->
                 <div class="bg-indigo-100 text-indigo-800 p-3 rounded-xl rounded-bl-none max-w-lg shadow-md"> <!-- Increased max-width from max-w-xs -->
-                    <p class="font-medium">Hello! I'm a multi-agent system powered by LangGraph.</p>
+                    <p class="font-medium">Hello! I'm a multi-agent system powered by LangGraph. I routes queries to appropriate teams, escalates to a human when necessary, creates concern tickets, records them in a database, and sends notifications.</p>
                     <!-- Added your demo details as a list -->
                     <ul class="list-disc list-inside text-sm mt-2 space-y-1">
                         <li>Connected to Slack & Airtable for concern tickets (Notification & Database).</li>
