--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,8 @@
     </div>
 
     <script>
-        const API_URL = "http://127.0.0.1:8000"; // Ensure this matches your Uvicorn host
+        // const API_URL = "http://127.0.0.1:8000"; // Ensure this matches your Uvicorn host --> For local deployment
+        const API_URL = "langgraph-multi-agent.up.railway.app"
         const chatForm = document.getElementById('chat-form');
         const chatHistory = document.getElementById('chat-history');
         const userInput = document.getElementById('user-input');
